bug: card style fix on mobile view

--- a/src/Blog/BlogDetail.module.css
+++ b/src/Blog/BlogDetail.module.css
@@ -53,7 +53,7 @@
     width: 90%;
   }
   .blogDetailHeading {
-    font-size: 45px;
+    font-size: 35px;
   }
   .blogDetailSubHeading {
     font-size: 20px;
@@ -62,7 +62,7 @@
     font-size: 17.5px;
   }
   .imageHeading {
-    font-size: 45px;
+    font-size: 40px;
   }
 }
 
