--- a/src/Home/Banner/Banner.module.css
+++ b/src/Home/Banner/Banner.module.css
@@ -27,7 +27,7 @@
 
 @media only screen and (max-width: 768px) {
   .banner {
-    font-size: 52px;
+    font-size: 50px;
     width: 100%;
   }
 }
