--- a/src/components/ExpandedBlogCard/index.module.css
+++ b/src/components/ExpandedBlogCard/index.module.css
@@ -2,7 +2,7 @@
   z-index: 2;
   position: relative;
   display: flex;
-  padding: 5px;
+  padding: 25px 12px;
   width: 80%;
   margin: auto;
   margin-top: 25px;
@@ -45,12 +45,14 @@
 @media only screen and (max-width: 768px) {
   .blogCardContainer {
     flex-direction: column;
+    width: 90%;
   }
   .blogCardContent {
     margin-left: 5px;
     margin-right: 5px;
   }
   .blogCardHeading {
+    padding-top: 28px;
     font-size: 40px;
   }
   .blogCardOverlay {
@@ -58,6 +60,7 @@
   }
   .blogCardSubHeading {
     font-size: 20px;
+    padding-bottom: 20px;
   }
 }
 
